# ADClima

./: .gitignore  LICENSE  Makefile  README.md  Untitled.ipynb  pyproject.toml
cds_captura/: connection.py  coord_points.py  extract_coordinates.py  extract_grib.py  extract_latlons.py  extract_latons.py  extract_netcdf.py  seasonal_report.sql
cds_weather/: connection.py  extract_coordinates.py  extract_latlons.py  extract_reanalysis.py  globals.py  reanalysis_era5_single_levels.sql
conda/: dev.yaml  environment.yaml
data/: municipios.json
