[tool.poetry]
name = "adclima"
version = "0.1.0"
description = "Collects weather data based on geographic location."
authors = ["Luã Bida Vacaro"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
docker-compose = "^1.29.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
