[tool.poetry]
name = "adclima"
version = "0.1.0"
description = "Collects weather data based on geographic location."
authors = ["Luã Bida Vacaro"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9.13"
cdsapi = "^0.5.1"
pygrib = "^2.1.4"
eccodes = "^1.5.0"
pandas = "^1.4.4"
geopandas = "^0.11.1"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
ipython = "^8.5.0"
npm = "^0.1.1"
node = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
