[tool.poetry]
name = "adclima"
version = "0.1.0"
description = "Collects weather data based on geographic location."
authors = ["Luã Bida Vacaro"]
license = "BSD-3-Clause"

packages = [
    { include = "cds_weather" },
]

[tool.poetry.dependencies]
python = "^3.9.13"
cdsapi = "^0.5.1"
eccodes = "^1.5.0"
pandas = "^1.4.4"
numpy = "^1.23.3"
xarray = "^2022.6.0"
MetPy = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
ipython = "^8.5.0"
npm = "^0.1.1"
node = "^1.0"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

